copy .gitignore from binary

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-dist
-cabal-dev
+*.hi
+*.o
+*.p_hi
+*.prof
+*.tix
+*.swp
+.hpc/
+/benchmarks/bench
+/benchmarks/builder
+/dist/*
+/tests/qc
+GNUmakefile
+dist-boot
+dist-install
+ghc.mk
+.cabal-sandbox
 cabal.sandbox.config
